k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-lb
spec:
  type: LoadBalancer
  selector:
    run: my-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
